--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -62,6 +62,28 @@
 .content__container {
   padding: 30px 0;
 }
+// added by booking widet
 .spwidget-button-wrapper {
-	margin: 15px;
+  margin: 15px;
+}
+.spwidget-button-wrapper {
+  text-align: center;
+}
+.spwidget-button {
+  display: inline-block;
+  padding: 12px 24px;
+  color: #fff !important;
+  background: #de6a26;
+  border: 0;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.spwidget-button:hover {
+  background: #d15913;
+}
+.spwidget-button:active {
+  color: rgba(255, 255, 255, 0.75) !important;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
 }
