--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -87,3 +87,7 @@
   color: rgba(255, 255, 255, 0.75) !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
 }
+
+.profile-main {
+	padding-bottom: 32px;
+}
