--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -89,5 +89,69 @@
 }
 
 .profile-main {
-	padding-bottom: 32px;
+  padding-bottom: 32px;
+  flex-basis: 0px;
+  flex-grow: 1;
+  margin: 32px;
+}
+@keyframes slide {
+  0% {
+    max-height: 0px;
+    opacity: 0;
+  }
+
+  50% {
+    max-height: 900px;
+    opacity: 0;
+  }
+  100% {
+    max-height: 900px;
+    opacity: 1;
+  }
+}
+
+@keyframes out {
+  0% {
+    max-height: 900px;
+    opacity: 1;
+  }
+
+  50% {
+    max-height: 900px;
+    opacity: 0;
+  }
+  100% {
+    max-height: 0px;
+    opacity: 0;
+  }
+}
+.view-bio {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  font-family: 'Source Sans Pro';
+  letter-spacing: 0.5rem;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.bio {
+  overflow: hidden;
+  max-height: 0px;
+}
+
+.bio-open {
+  animation: slide;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.bio-close {
+  animation: out;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-direction: forwards;
 }
