migrate to datocms from wordpress

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -155,3 +155,11 @@
   animation-timing-function: ease-in-out;
   animation-direction: forwards;
 }
+
+.active p {
+  margin-bottom: 4px;
+}
+
+article.active p:last-child {
+  margin-bottom: 16px;
+}
